<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/preference_category_header_logging">

        <SwitchPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:key="@string/pref_key_logs"
            android:title="@string/use_logs"
            app:summary="@string/use_logs_summary" />

        <Preference
            android:key="pref_key_log_file_info"
            android:title="Diagnostic Log File"
            android:summary="Download/Remote-Manager/logs/rclone_diagnostic.log" />

        <Preference
            android:key="pref_key_share_log"
            android:title="Share Diagnostic Log"
            android:summary="Send or export the current log file" />

        <Preference
            android:key="pref_key_clear_log"
            android:title="Clear Diagnostic Log"
            android:summary="Delete the current diagnostic log file from storage" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_category_header_rclone">

        <de.felixnuesse.extract.settings.preferences.ButtonPreference
            android:title="@string/pref_send_sigquit_title"
            app:summary="@string/pref_send_sigquit_summary"
            android:key="TempKeySigquit" />
    </PreferenceCategory>
</PreferenceScreen>